--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "better-sqlite3": "^12.5.0",
     "next": "^15.5.6",
     "react": "^19.0.0",
     "react-dom": "^19.0.0"
