--- a/package.json
+++ b/package.json
@@ -6,10 +6,12 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "initdb": "node initdb.js"
   },
   "dependencies": {
-    "better-sqlite3": "^12.5.0",
+    "@libsql/client": "^0.15.15",
+    "dotenv": "^17.2.3",
     "next": "^15.5.6",
     "react": "^19.0.0",
     "react-dom": "^19.0.0"
