--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@libsql/client": "^0.15.15",
+    "@vercel/blob": "^2.0.0",
     "dotenv": "^17.2.3",
     "next": "^15.5.6",
     "react": "^19.0.0",
